<resources>
    <string name="app_name">Proyecto2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="login">Login</string>
    <string name="register">Registrar</string>
    <string name="previous">Previous</string>
    <string name="usuario">Usuario</string>
    <string name="password">Contra</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">Email</string>
    <string name="telefono">Telefono</string>
    <string name="guardar">Guardar</string>
    <string name="entrar_por_google">entrar por google</string>
    <string name="agregar">Agregar</string>
    <string name="bienvenido_senor_usuario">Bienvenido Senor Usuario</string>
    <string name="procedimiento">Procedimiento</string>
    <string name="hora">Hora</string>
    <string name="resultado">Resultado</string>
    <string name="cancelar">cancelar</string>
    <string name="regresar">Regresar</string>
    <string name="todo">TODO</string>
</resources>
