<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="login">

    <TextView
        android:id="@+id/process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:text="@string/procedimiento"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText7"
        app:layout_constraintEnd_toStartOf="@+id/editText7"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:text="@string/hora"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText8"
        app:layout_constraintEnd_toStartOf="@+id/editText8"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/outcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginBottom="10dp"
        android:text="@string/resultado"
        app:layout_constraintBottom_toBottomOf="@+id/editText9"
        app:layout_constraintEnd_toStartOf="@+id/editText9"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="13dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editText8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/process" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/time"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/outcome"
        app:layout_constraintTop_toBottomOf="@+id/editText8" />

    <Button
        android:id="@+id/regresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:text="@string/regresar"
        app:layout_constraintBaseline_toBaselineOf="@+id/saved2"
        app:layout_constraintEnd_toStartOf="@+id/saved2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saved2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="308dp"
        android:fontFamily="serif"
        android:onClick="agregar"
        android:text="@string/agregar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/regresar" />

</androidx.constraintlayout.widget.ConstraintLayout>