<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.proyecto2.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment"
            app:popUpTo="@id/ThirdFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_fourthFragment"
            app:destination="@id/fourthFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.proyecto2.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">
        <action
            android:id="@+id/action_SecondFragment_to_fifthFragment2"
            app:destination="@id/fifthFragment"
            app:enterAnim="@anim/nav_default_pop_enter_anim" />
    </fragment>
    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.example.proyecto2.ThirdFragment"
        tools:layout="@layout/fragment_register"
        android:label="@string/third_fragment_label" >
        <action
            android:id="@+id/action_thirdFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_ThirdFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/fourthFragment"
        android:name="com.example.proyecto2.FourthFragment"
        tools:layout="@layout/fragment_google"
        android:label="FourthFragment" >
        <action
            android:id="@+id/action_fourthFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/fifthFragment"
        android:name="com.example.proyecto2.FifthFragment"
        tools:layout="@layout/fragment_agregar"
        android:label="FifthFragment" >
        <action
            android:id="@+id/action_fifthFragment_to_SecondFragment"
            app:destination="@id/SecondFragment"
            app:enterAnim="@anim/nav_default_enter_anim" />
    </fragment>
</navigation>
